--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,13 @@
 
 
 .mindevents_meta_box {
+  .occurance-container {
+    padding: 10px;
+    &.today {
+      background: color.adjust($success, $lightness: 40%);
+      // color: #fff;
+    }
+  }
   a.button, button{
     cursor: pointer;
     border: 1px solid color.adjust($primary, $lightness: -10%);
@@ -42,13 +49,35 @@
       color: $dark;
     }
     &.checked-in {
-      background: #cccccc;
+      background: $success;
       color: #353535;
+      border-color: #a6a6a6;
+    }
+    &.disabled {
+      background: $info;
+      color: #414141;
       border-color: #a6a6a6;
     }
   }
   h3 {
     margin-bottom: 3px;
+  }
+  .status {
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background: $danger;
+    color: #fff;
+    &.completed {
+      background: $success;
+      color: #fff;
+    }
+    &.processing {
+      background: $info;
+      color: $dark;
+    }
+
   }
 }
 .mindevents_meta_box {
