--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -153,7 +153,9 @@
       .buttonContainer {
         width: 100%;
         margin-bottom: 10px;
+        margin-top: 10px;
         button.edit-button {
+          margin-top: 10px;
           &.update-event{
             display: block;
             width: 60%;
