--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -11,16 +11,22 @@
   display: flex;
   justify-content: space-between;
   button.calnav, button.archive-calnav{
-    font-size: 25px; 
-    line-height: 24px;
     cursor: pointer;
-    border: 1px solid color.adjust(rgb(67, 160, 217), $lightness: -10%);
+    border: 0;
     padding: 5px 7px;
     border-radius: 0;
     color: #fff;
-    background: rgb(67, 160, 217);
-    margin-bottom: -10px;
+    background: $primary;
+    @include transition(200ms);
+    span {
+      // font-size: 20px;
+      // line-height: 24px;
+      text-transform: uppercase;
+      font-weight: bold;
+      margin: 0 8px;
+    }
     &:hover {
+      @include transition(200ms);
       background: color.adjust(rgb(67, 160, 217), $lightness: -10%)
     } 
   }
@@ -294,7 +300,6 @@
                     font-size: 1em;
                     font-weight: bold;
 
-                    margin: 10px 0 0 0;
                     display: block;
                   }
                   .event-time {
@@ -316,6 +321,7 @@
                   width: 100px;
                   margin-right: 5px;
                   border: 2px solid #fff;
+                  align-self: start;
                   img {
                     width: 100%;
                   }
@@ -397,7 +403,10 @@
         background-color: rgba(255,255,255,.3);
         border: 1px solid $light;
         padding: 10px 20px;
-        border-radius: 20px;
+      }
+      .event-title {
+        margin-top: 10px;
+        font-size: 1.5em;
       }
     }
     .right-content {
@@ -528,10 +537,14 @@
           font-weight: bold;
           font-size: .6em;
           white-space: nowrap;
+          line-height: .6em;
         }
         span.value {
-
+          
           &.eventstarttime {
+            font-weight: bold;
+          }
+          &.eventendtime {
             font-weight: bold;
           }
         }
@@ -542,7 +555,7 @@
           flex-basis: 18%;
         }
         &.description {
-          // flex-basis: 52%;
+          margin-left: 20px;
         }
         
         &.link {
