fixed mobile view list display stuff.

--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -427,7 +427,7 @@
     .right-content {
       min-width: 20%;
     }
-    .meta_item {
+    .meta-item {
       .offer-link {
         button {
           display: block;
@@ -556,8 +556,38 @@
       display: flex;
       padding-left: 15px;
       justify-content: space-between;
-      .meta_item {
+      .event-notice {
+        font-size: .8em;
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-top: 8px;
+        // color: $light;
+        background-color: rgba(255,255,255,.3);
+        border: 1px solid $light;
+        padding: 10px 20px;
+        &:first-child {
+          margin-top: 0;
+        }
+        &:last-child-of-type {
+          margin-bottom: 6px;
+        }
+      }
+      .meta-item {
         padding: 6px 0;
+        h3 {
+          &.event-title {
+            font-size: 1.5em;
+            margin-top: 0;
+          }
+        }
+        &.time-span {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .endtime {
+              margin-top: 20px;
+            }
+        }
         span.label {
           display: block;
           text-transform: uppercase;
