--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -555,22 +555,18 @@
       flex-basis: 100%;
       display: flex;
       padding-left: 15px;
-      justify-content: space-between;
+      justify-content: start;
+      flex-wrap: wrap;
       .event-notice {
         font-size: .8em;
         font-weight: bold;
         text-transform: uppercase;
         margin-top: 8px;
-        // color: $light;
-        background-color: rgba(255,255,255,.3);
+        flex-basis: 100%;
+        background-color: rgba(212, 147, 61, 0.3);
         border: 1px solid $light;
         padding: 10px 20px;
-        &:first-child {
-          margin-top: 0;
-        }
-        &:last-child-of-type {
-          margin-bottom: 6px;
-        }
+        margin-bottom: 10px;
       }
       .meta-item {
         padding: 6px 0;
@@ -584,6 +580,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            flex-basis: 10%;
             .endtime {
               margin-top: 20px;
             }
@@ -613,6 +610,8 @@
         }
         &.description {
           margin-left: 20px;
+          flex-basis: 60%;
+          padding-right: 10px;
         }
         
         &.link {
