--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,13 @@
       table {
         display: none;
       }
-      cursor: pointer;
+      span.toggle-expand {
+        cursor: pointer;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: .7em;
+      }
+      
       
     }
     &.show {
