fixed some styles for adding new events

--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -128,7 +128,7 @@ table.event-attendees {
   				background: rgba(1, 1, 1, .1);
   			}
 
-  			div.shadow-event {
+  			div.shadow-event, div.event {
           position: relative;
           display: flex;
           flex-wrap: nowrap;
