--- a/sass/utilities.scss
+++ b/sass/utilities.scss
@@ -24,9 +24,9 @@
   }
   $primary:       rgb(190, 32, 46);
   $secondary:     rgb(179, 175, 172);
-  $success:       rgba(75,175,7, 1);
+  $success:       rgb(150, 175, 133);
   $background:    rgba(250, 251, 252, 1);
-  $info:          rgb(94, 118, 145);
+  $info:          rgb(167, 187, 209);
   $warning:       rgba(201,169,56, 1);
   $danger:        rgba(201,73,73, 1);
   $light:         rgb(230, 230, 230);
