--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -633,7 +633,7 @@ table.event-attendees {
         &.time-span {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            // justify-content: space-between;
             flex-basis: 10%;
             .endtime {
               margin-top: 20px;
@@ -670,7 +670,7 @@ table.event-attendees {
         
         &.link {
           flex-basis: 20%;
-          align-items: center;
+          // align-items: center;
           justify-content: flex-end;
           display: flex;
           a.button, button{
