--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 @use 'loading' as *;
 @use 'forms-main' as *;
 @use 'calendar' as *;
-@use 'mobile' as *; 
+
 
 
 .mindevents_meta_box { 
@@ -198,3 +198,4 @@
   }
 }
 
+@import "mobile.scss"; 
