--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -114,6 +114,7 @@
       }
       .left-content {
         width: 50%;
+        padding-left: 20px !important;
       }
       .right-content {
         width:100%;
@@ -143,9 +144,11 @@
       }
       .left-content {
         width:50%;
+        padding-left: 15px !important;
       }
       .right-content {
         width: 25%;
+        padding-left: 15px !important;
       }
     }
   }
@@ -171,9 +174,11 @@
       }
       .left-content {
         width: 50%;
+        padding-left: 20px !important;
       }
       .right-content {
         width: 25%;
+        padding-left: 20px !important;
       }
     }
   }
